--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -34,3 +34,13 @@
     margin: 0;
     padding: 0;
 }
+
+.navbarShadow {
+    z-index: 10;
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    background-color: #000000cc;
+}
